progD_projet/myservice-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myservice
  name: myservice
spec:
  ports:
    - nodePort: 31281
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: myservice
  type: LoadBalancer
