progD_projet/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: frontendapp.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-service
                port:
                  number: 8000
